--- a/CoupleTimeline/views/preview.ejs
+++ b/CoupleTimeline/views/preview.ejs
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel='stylesheet' href='/stylesheets/common.css'>
     <link rel='stylesheet' href='/stylesheets/main.css'>
+    <!--
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.js"></script>
     <script src="//code.jquery.com/jquery.min.js"></script>
+    -->
     <style media="screen">
       .divPreview{
         text-align: center;
@@ -42,7 +44,41 @@
     </style>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="http://files.codepedia.info/uploads/iScripts/html2canvas.js"></script>
+    <script src="js/html2canvas.js" type="text/javascript"></script>
+    <script>
+    function hidePreviewButton(){
+        var btnPreview = document.getElementById('btn-Preview-Image');
+        btnPreview.hidden = true;
+    }
+
+
+    $(document).ready(function(){
+    var element = $("#html-content-holder"); // global variable
+    var getCanvas; // global variable
+    var download = document.getElementById('btn-Convert-Html2Image');
+
+        $("#btn-Preview-Image").on('click', function () {
+             html2canvas(element, {
+             onrendered: function (canvas) {
+                    $("#previewImage").append(canvas);
+                    getCanvas = canvas;
+                 }
+             });
+
+             download.hidden = false;
+             $(this).hide();
+        });
+
+    	$("#btn-Convert-Html2Image").on('click', function () {
+        var imgageData = getCanvas.toDataURL("image/png");
+        // Now browser starts downloading it instead of just showing it
+        var newData = imgageData.replace(/^data:image\/png/, "data:application/octet-stream");
+        $("#btn-Convert-Html2Image").attr("download", "your_pic_name.png").attr("href", newData);
+    	});
+
+    });
+
+    </script>
 </head>
 <body>
     <a href="/main"><img src="/res/icon.png" class="mainIcon"></a>
@@ -81,41 +117,5 @@
         </div>
         <div class="divCanvas" id="previewImage">
         </div>
-
-
-    <script>
-    function hidePreviewButton(){
-        var btnPreview = document.getElementById('btn-Preview-Image');
-        btnPreview.hidden = true;
-    }
-
-
-    $(document).ready(function(){
-    var element = $("#html-content-holder"); // global variable
-    var getCanvas; // global variable
-    var download = document.getElementById('btn-Convert-Html2Image');
-
-        $("#btn-Preview-Image").on('click', function () {
-             html2canvas(element, {
-             onrendered: function (canvas) {
-                    $("#previewImage").append(canvas);
-                    getCanvas = canvas;
-                 }
-             });
-
-             download.hidden = false;
-             $(this).hide();
-        });
-
-    	$("#btn-Convert-Html2Image").on('click', function () {
-        var imgageData = getCanvas.toDataURL("image/png");
-        // Now browser starts downloading it instead of just showing it
-        var newData = imgageData.replace(/^data:image\/png/, "data:application/octet-stream");
-        $("#btn-Convert-Html2Image").attr("download", "your_pic_name.png").attr("href", newData);
-    	});
-
-    });
-
-    </script>
 </body>
 </html>
